changed the way we do the database
