# backend/api/openapi.yaml
@@ -15,19 +15,17 @@ paths:
       parameters:
       - name: googleID
         in: path
-        description: googleID
+        description: google ID
         required: true
         schema:
           $ref: '#/components/schemas/ID'
       responses:
         200:
-          description: Found list of medicine from customer
+          description: Found all of customer's medicine
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/MedicineArray'
-        401:
-          description: Unauthorized!
         404:
           description: Customer not found
 
@@ -36,7 +34,7 @@ paths:
       parameters:
       - name: googleID
         in: path
-        description: googleID
+        description: google ID
         required: true
         schema:
           $ref: '#/components/schemas/ID'
@@ -49,66 +47,74 @@ paths:
               $ref: '#/components/schemas/Medicine'
       responses:
         201:
-          description: Application response
+          description: Medicine created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Medicine'
         409:
-          description: Invalid Medicine
+          description: Invalid medicine
 
-  /customer/{googleID}:
-    get:
-      description: Show the customer Info
+  /medicine/{medicineID}:
+    delete:
+      description: Delete a medicine
       parameters:
-      - name: googleID
+      - name: medicineID
         in: path
-        description: googleID
+        description: medicine ID
         required: true
         schema:
           $ref: '#/components/schemas/ID'
       responses:
         200:
-          description: Found Customer Info
+          description: Medicine found and deleted
+        404:
+          description: Medicine not found
+
+  /customer/{googleID}:
+    get:
+      description: Show the customer's information
+      parameters:
+      - name: googleID
+        in: path
+        description: google ID
+        required: true
+        schema:
+          $ref: '#/components/schemas/ID'
+      responses:
+        200:
+          description: Found customer
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Customer'
-        401:
-          description: Unauthorized!
         404:
           description: Customer not found
+
     post:
       description: Create new customer
       parameters:
       - name: googleID
         in: path
-        description: googleID
+        description: google ID
         required: true
         schema:
           $ref: '#/components/schemas/ID'
-      requestBody:
-        description: New Customer
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Customer'
       responses:
         201:
-          description: Application response
+          description: Customer created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Customer'
         409:
-          description: Invalid Medicine
+          description: Invalid customer
 
 components:
   schemas:
     ID:
       type: string
-    
+
     MedicineArray:
       type: array
       items:
@@ -125,12 +131,12 @@ components:
           type: number
         doses: 
           type: number
-        totalCount:
+        totalAmount:
           type: number
 
     Customer:
       type: object
       properties:
-        medicineArray:
-          $ref: '#/components/schemas/MedicineArray'
+        googleID:
+          type: string
     
