# backend/src/models/customerInfo.js
@@ -2,7 +2,6 @@ const mongoose = require('mongoose');
 
 const customerSchema = mongoose.Schema({
     googleID: String,
-    medicineArray: [Object],
 });
 
 const CustomerInfo = mongoose.model('CustomerInfo', customerSchema);
