# backend/src/models/medicineInfo.js
@@ -1,11 +1,12 @@
 const mongoose = require('mongoose');
 
 const medicineSchema = mongoose.Schema({
+    googleID: String,
     name: String,
     description: String,
     frequency: Number,
     doses: Number,
-    totalCount: Number,
+    totalAmount: Number,
 });
 
 const MedicineInfo = mongoose.model('MedicineInfo', medicineSchema);
